test/files/neg/t5390c.check
t5390c.scala:7: error: forward reference to value a defined on line 8 extends over definition of value b
    val b = new a.B("")
                ^
1 error
